objects/box__BoxSign_Signer__c.object
<CustomObject>
    <fields>
        <fullName>box__BoxSign__c</fullName>
        <label>Box Sign</label>
        <referenceTo>box__BoxSign__c</referenceTo>
        <relationshipLabel>Signers</relationshipLabel>
        <relationshipName>BoxSign_Signers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>box__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BoxSign Signers</relationshipLabel>
        <relationshipName>BoxSign_Signers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>box__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>box__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>box__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__SignerId__c</fullName>
        <externalId>true</externalId>
        <label>SignerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box Sign Signer</label>
    <nameField>
        <displayFormat>SRS-{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Sign Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>